name:                markury
version:             0.1.0.0
synopsis:            A simple bookmark application
description:         Please see README.md
homepage:            https://github.com/y-taka-23/markury#readme
license:             MIT
license-file:        LICENSE
author:              TAKAHASHI Yuto
maintainer:          ytaka23dev@gmail.com
copyright:           2015 TAKAHASHI Yuto
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Markury
                     , Web.Markury.Action.BookmarkAction
                     , Web.Markury.Action.TagAction
                     , Web.Markury.Action.UserAction
                     , Web.Markury.Action.Util
                     , Web.Markury.Model.DB
                     , Web.Markury.Model.Input
                     , Web.Markury.View
  build-depends:       base
                     , Spock
                     , Spock-digestive
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , digestive-functors
                     , digestive-functors-blaze
                     , monad-logger
                     , transformers
                     , resourcet
                     , text
                     , time
                     , blaze-html
  default-language:    Haskell2010

executable markury
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , markury
  default-language:    Haskell2010

test-suite markury-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , markury
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/y-taka-23/markury
